package in.ashwanik.pdp.observer;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class GameEntity {
    private int killPoint;
    private String name;
}
