@startuml

title __OBSERVER's Class Diagram__\n

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Achievement {
        - name : String
        + Achievement()
        + getName()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Achievements {
        - achievementList : List<Achievement>
        + Achievements()
        + getAchievementList()
        + onNotify()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Event {
        + Event()
        + getPayload()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Game {
        + Game()
        + getAchievements()
        + getGameEntityStats()
        + getScorer()
        + play()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.GameEntity {
        - killPoint : int
        - name : String
        + GameEntity()
        + getKillPoint()
        + getName()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.GameEntityStats {
        + updateStats()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    interface in.ashwanik.pdp.observer.Observer {
        {abstract} + onNotify()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Scorer {
        - score : int
        + getScore()
        + onNotify()
    }
  }
  

  namespace in.ashwanik.pdp.observer {
    class in.ashwanik.pdp.observer.Subject {
        - observers : List<Observer>
        + Subject()
        + addObserver()
        + removeObserver()
        + update()
    }
  }
  

  in.ashwanik.pdp.observer.Achievements .up.|> in.ashwanik.pdp.observer.Observer
  in.ashwanik.pdp.observer.Event o-- T : payload
  in.ashwanik.pdp.observer.Game o-- in.ashwanik.pdp.observer.Achievements : achievements
  in.ashwanik.pdp.observer.Game o-- in.ashwanik.pdp.observer.GameEntityStats : gameEntityStats
  in.ashwanik.pdp.observer.Game o-- in.ashwanik.pdp.observer.Scorer : scorer
  in.ashwanik.pdp.observer.GameEntityStats -up-|> in.ashwanik.pdp.observer.Subject
  in.ashwanik.pdp.observer.Scorer .up.|> in.ashwanik.pdp.observer.Observer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
